# legislice

./: .gitignore  .readthedocs.yaml  changelog.md  license.md  readme.md  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-package-2.yml  python-package.yml
docs/: conf.py  index.rst
docs/api_docs/: citations.rst  download.rst  enactments.rst  groups.rst  name_index.rst  schemas.rst  types.rst
docs/guides/: downloading.rst  enactments.rst
docs/history/: releases.rst
legislice/: __init__.py  citations.py  client.py  download.py  enactments.py  groups.py  mock_clients.py  name_index.py  schemas.py  types.py  yaml_schemas.py
legislice/mock_responses/: usc.json
notebooks/: downloading.ipynb  enactments.ipynb
tests/: conftest.py  test_citations.py  test_download.py  test_enactments.py  test_groups.py  test_load_json.py  test_name_index.py  test_schema.py
tests/cassettes/: TestAddEnactments.test_add_selection_from_changed_section.yaml  TestAddEnactments.test_add_subset_nested_enactment.yaml  TestAddEnactments.test_add_superset_nested_enactment.yaml  TestAddEnactments.test_fail_to_add_non_parent_or_child_enactment.yaml  TestCollectEnactments.test_load_updated_enactment_data.yaml  TestCollectEnactments.test_update_unloaded_enactment_from_api.yaml  TestCompareEnactment.test_different_section_same_text.yaml  TestCompareEnactment.test_equal_enactment_text.yaml  TestCompareEnactment.test_fewer_provisions_does_not_imply_more.yaml  TestCompareEnactment.test_not_gt_if_equal.yaml  (+66 more)
(+56 files in other folders)
