[metadata]

name = legislice
version = 0.5.0
author = Matt Carey
author_email = matt@authorityspoke.com
description = API client for fetching and comparing passages from legislation
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/mscarey/legislice
project_urls =
    Bug Tracker = https://github.com/mscarey/legislice/issues
    Documentation = https://legislice.readthedocs.io/en/latest/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Legal Industry
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Sociology :: History

[options]
packages = find:
python_requires = >=3.8

[pydocstyle]

add-ignore=D105,D106,D202,D301

[flake8]

ignore = E121, E122, E124, E126, E128, E203, E302, E303, E501, E902, F821, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    prof

max-complexity = 10
